fix show employees

--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,3 +1,4 @@
 <h1>Employees: </h1>
-<br />
-{{employees}}
+<ul>
+    <li *ngFor="let employee of employees"> {{employee.first_name}} {{employee.last_name}}</li>
+<ul>
