--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <employee-list></employee-list>
+<div class="card-panel">
+    <employee-list></employee-list>
 </div>
