--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,4 +1,4 @@
 <h1>Employees: </h1>
 <ul>
-    <li *ngFor="let employee of employees"> {{employee.first_name}} {{employee.last_name}}</li>
+    <li *ngFor="let employee of employees"><i class="medium material-icons">perm_identity</i> {{employee.first_name}} {{employee.last_name}} ({{employee.nickname}})</li>
 <ul>
