--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+ul li span {
+    cursor: pointer;
+}
+
+ul li span:hover {
+    color: #999999;
+}
