Creating children routes

--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -8,3 +8,4 @@
     </li>
 <ul>
 <a routerLink="/employees/new" class="btn-floating btn-large waves-effect waves-light blue darken-2" style="float:right;vertical-align:bottom"><i class="material-icons">add</i></a>
+<router-outlet></router-outlet>
