--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -1,11 +1,21 @@
+<div class="container">
 <h1>Employees: </h1>
-<ul>
-    <li *ngFor="let employee of employees">
-        <i class="medium material-icons" style="display: inline-flex; vertical-align: middle">perm_identity</i>
-        <a [routerLink]="[employee.id]">{{employee.first_name}} {{employee.last_name}} ({{employee.nickname}})</a>
-        <i class="tiny material-icons">edit</i>
-        <i class="tiny material-icons">delete</i>
-    </li>
-<ul>
+
+<div class="row">
+    <div class="col s6">
+      <ul>
+        <li *ngFor="let employee of employees">
+          <i class="medium material-icons" style="display: inline-flex; vertical-align: middle">perm_identity</i>
+          <a [routerLink]="[employee.id]">{{employee.first_name}} {{employee.last_name}} ({{employee.nickname}})</a>
+          <i class="tiny material-icons">edit</i>
+          <i class="tiny material-icons">delete</i>
+        </li>
+      </ul>
+    </div>
+    <div class="col s6">
+      <router-outlet></router-outlet>
+    </div>
+</div>
+
 <a routerLink="/employees/new" class="btn-floating btn-large waves-effect waves-light blue darken-2" style="float:right;vertical-align:bottom"><i class="material-icons">add</i></a>
-<router-outlet></router-outlet>
+</div>
